tests/expectations/compiler/tuple/function_return_single_fail.out
Error [EPAR0370029]: A tuple expression must have at least two elements.
    --> compiler-test:7:16
     |
   7 |         return (b,);
     |                ^^^^
